# neural-network-model-exploration-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ideas.txt  todo.txt
demoMaterials/in/: features_iris.json  saved_model_iris.json
dependencies/: README.md  dependency-versions.txt
include/concepts/: ByteSizedIntegral.hpp  Floating.hpp  Integral.hpp  Numeric.hpp
include/core/: ContinuousFeature.hpp  DiscreteFeature.hpp  Domain.hpp  InputSet.hpp  OnlyOneHighBConstrainedFeatureSet.hpp  RandomContinuousFeature.hpp  RandomDiscreteFeature.hpp  RandomFeature.hpp  TrialManager.hpp
include/core/abstract/: FeatureBase.hpp  HasCurr.hpp  HasGenerator.hpp  HasName.hpp  HasNext.hpp  HasReset.hpp  RandomFeatureBase.hpp
include/programs/: fullSearch.hpp  manualFileSearch.hpp  manualUserSearch.hpp  programRunner.hpp
include/util/: DynamicBitSet.hpp  Globals.hpp  JsonUtils.hpp  ModelFeatureJsonUtils.hpp  OverloadedLambda.hpp  SaveToFile.hpp  StatsTracker.hpp  TerminalUtils.hpp  ThreadPool.hpp  TimeManager.hpp  interpolate.hpp  mergeVectors.hpp  mt19937Singleton.hpp  stats.hpp
src/: main.cpp
